kubernetes/express-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-express-app
  namespace: profugo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-express-app
  template:
    metadata:
      labels:
        app: my-express-app
    spec:
      containers:
        - name: my-express-app
          image: berglund10/my_express_app:latest
          ports:
            - containerPort: 3000
