kubernetes/postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  namespace: profugo
  labels:
    app: postgres
spec:
  containers:
    - name: postgres
      image: postgres:latest
      ports:
        - containerPort: 5432
