kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-express-app-service
  namespace: profugo
spec:
  selector:
    app: my-express-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
